feat : add feature with likes and dislikes, change services and DTO for new functionality